--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <header>
         <h1>Wordle</h1>
     </header>
-    <main>
+    <main class="vertical-gutter">
         <div class="message"></div>
-        <div class="tiles">
-            <div class="row" data-row="1"></div>
-            <div class="row" data-row="2"></div>
-            <div class="row" data-row="3"></div>
-            <div class="row" data-row="4"></div>
-            <div class="row" data-row="5"></div>
-            <div class="row" data-row="6"></div>
+        <div class="rows">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
         </div>
         <div class="keyboard">
-            <div class="keys-1"></div>
-            <div class="keys-2"></div>
-            <div class="keys-3"></div>
+            <div class="keys"></div>
+            <div class="keys"></div>
+            <div class="keys"></div>
         </div>
     </main>
     
