--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="row"></div>
             <div class="row"></div>
         </div>
+        <button class="reset hidden">reset</button>
         <div class="keyboard">
             <div class="keys"></div>
             <div class="keys"></div>
